test/tests/compiler/16_characters_and_strings/valid/char_constants/return_char_constant.plx
#  Simplest possible test case for using a character constant 
pub fn main(none) i32 {
    return 'c' #  ASCII value 99
}
