test/tests/compiler/16_characters_and_strings/invalid_parse/extra_credit/character_const_goto.plx
# You can't use a character constant as a label in a goto statement
pub fn main(none) i32 {
    jump 'x'
    'x'
    return 0
}
